--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Russian-travel</title>
 </head>
 <body class="page">
-  <header class="header">
+  <header class="header page__section">
     <img class="header__logo" src="./images/header-logo.svg" alt="">
     <nav>
       <ul class="header__lang-menu">
@@ -25,7 +25,7 @@
       <img class="lead__image" src="./images/lead-image.png" alt="">
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
-    <section class="intro">
+    <section class="intro page__section">
       <h2 class="intro__title">Чего мы там не видели?</h2>
       <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
@@ -36,7 +36,7 @@
         <li class="intro__item">Аэропортов 241</li>
       </ul>
     </section>
-    <section class="photo-grid">
+    <section class="photo-grid page__section">
       <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
       <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
       <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
