--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
   <title>Russian-travel</title>
 </head>
 <body class="page">
+
   <header class="header page__section">
     <img class="header__logo" src="./images/header-logo.svg" alt="">
     <nav>
-      <ul class="header__lang-menu">
+      <ul class="header__menu">
         <li class="header__menu-item"><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
         <li class="header__menu-item"><a class="header__lang-link" href="#">En</a></li>
       </ul>
     </nav>
   </header>
+
   <main>
-    <section class="lead">
+    <section class="lead page__section page__section_size_large">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <img class="lead__image" src="./images/lead-image.png" alt="">
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
+
     <section class="intro page__section">
       <h2 class="intro__title">Чего мы там не видели?</h2>
       <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
@@ -36,6 +39,7 @@
         <li class="intro__item">Аэропортов 241</li>
       </ul>
     </section>
+
     <section class="photo-grid page__section">
       <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
       <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
@@ -50,6 +54,7 @@
       <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
       <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
     </section>
+
     <section class="places">
       <div class="place">
         <h2 class="place__title">Куршская коса</h2>
@@ -101,6 +106,7 @@
         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
       </div>
     </section>
+
     <section class="cover">
       <div class="cover__overlay"></div>
       <div class="cover__background"></div>
@@ -108,6 +114,7 @@
       <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
     </section>
   </main>
+
   <footer class="footer">
     <nav>
       <ul class="footer__links">
