--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   </header>
 
   <main>
-    <section class="lead page__section page__section_size_large">
+    <section class="lead page__section page__section_size_l">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <img class="lead__image" src="./images/lead-image.png" alt="">
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
 
-    <section class="intro page__section">
+    <section class="intro page__section page__section_size_s">
       <h2 class="intro__title">Чего мы там не видели?</h2>
       <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
@@ -41,21 +41,21 @@
     </section>
 
     <section class="photo-grid page__section">
-      <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
-      <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
-      <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
-      <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
-      <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
-      <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
-      <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
-      <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
-      <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
-      <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
-      <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
-      <div class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt=""></div>
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
     </section>
 
-    <section class="places">
+    <section class="places page__section page__section_size_m">
       <div class="place">
         <h2 class="place__title">Куршская коса</h2>
         <div class="place__website">
@@ -107,7 +107,7 @@
       </div>
     </section>
 
-    <section class="cover">
+    <section class="cover page__section page__section_size_xl">
       <div class="cover__overlay"></div>
       <div class="cover__background"></div>
       <h2 class="cover__title">До Байкала «на собаках»</h2>
@@ -115,7 +115,7 @@
     </section>
   </main>
 
-  <footer class="footer">
+  <footer class="footer page__section">
     <nav>
       <ul class="footer__links">
         <li class="footer__list-item"><a class="footer__link" href="#">Карты</a></li>
