--- a/index.html
+++ b/index.html
@@ -108,10 +108,11 @@
     </section>
 
     <section class="cover page__section page__section_size_xl">
-      <div class="cover__overlay"></div>
-      <div class="cover__background"></div>
-      <h2 class="cover__title">До Байкала «на собаках»</h2>
-      <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+      <div class="cover__background">
+        <div class="cover__overlay"></div>
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+      </div>
     </section>
   </main>
 
