--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
     </section>
 
     <section class="photo-grid page__section">
-      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
-      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="">
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Фотография из окна поезда">
+      <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Фотография вершины гор в облаках">
+      <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Фотография собаки на стогу сена в утреннем тумане">
+      <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Фотография из Сочи - лес на склоне горы">
+      <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Фотография колеса автомобиля, стоящего на льду">
+      <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Фотография озера Байкал">
+      <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Фотография заснеженных вершин Эльбруса">
+      <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Фотография знака пешеходного перехода">
+      <img class="photo-grid__item" src="./images/photo-grid-kamchatka.jpg" alt="Фотография пейзажа на Камчатке">
+      <img class="photo-grid__item" src="./images/photo-grid-kamchatka2.jpg" alt="Фотография сопок на Камчатке">
+      <img class="photo-grid__item" src="./images/photo-grid-baikal2.jpg" alt="Фотография берега на озере Байкал">
+      <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Фотография природного парка Ергаки">
     </section>
 
     <section class="places page__section page__section_size_m">
@@ -60,9 +60,9 @@
         <h2 class="place__title">Куршская коса</h2>
         <div class="place__website">
           <p class="place__url-heading">url</p>
-          <a class="place__link" href="#">park-kosa.ru</a>
+          <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
         </div>
-        <img class="place__image" src="./images/place-kosa.jpg" alt="">
+        <img class="place__image" src="./images/place-kosa.jpg" alt="Фотография Куршского залива, Калининград">
         <div class="place__content">
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
           <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
@@ -72,9 +72,9 @@
         <h2 class="place__title">Кольский</h2>
         <div class="place__website">
           <p class="place__url-heading">url</p>
-          <a class="place__link" href="#">park-kosa.ru</a>
+          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
         </div>
-        <img class="place__image" src="./images/place-kosa.jpg" alt="">
+        <img class="place__image" src="./images/place-kolskiy.jpg" alt="Фотография природы Кольского полуострова">
         <div class="place__content">
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
           <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
@@ -84,9 +84,9 @@
         <h2 class="place__title">Алтай</h2>
         <div class="place__website">
           <p class="place__url-heading">url</p>
-          <a class="place__link" href="#">park-kosa.ru</a>
+          <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
         </div>
-        <img class="place__image" src="./images/place-kosa.jpg" alt="">
+        <img class="place__image" src="./images/place-altay.jpg" alt="Фотография лесов Алтая">
         <div class="place__content">
           <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
         <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
@@ -96,9 +96,9 @@
         <h2 class="place__title">Зимний Байкал</h2>
         <div class="place__website">
           <p class="place__url-heading">url</p>
-          <a class="place__link" href="#">park-kosa.ru</a>
+          <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
         </div>
-        <img class="place__image" src="./images/place-kosa.jpg" alt="">
+        <img class="place__image" src="./images/place-baikal.jpg" alt="Лед озера Байкал">
         <div class="place__content">
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
           <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
@@ -108,9 +108,9 @@
         <h2 class="place__title">Карелия</h2>
         <div class="place__website">
           <p class="place__url-heading">url</p>
-          <a class="place__link" href="#">park-kosa.ru</a>
+          <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
         </div>
-        <img class="place__image" src="./images/place-kosa.jpg" alt="">
+        <img class="place__image" src="./images/place-kareliya.jpg" alt="Фотография природы Карелии - леса, озера">
         <div class="place__content">
           <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div>
@@ -119,7 +119,7 @@
 
     <section class="cover page__section page__section_size_xl">
       <div class="cover__background">
-        <div class="cover__overlay"></div>
+        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala"><div class="cover__overlay"></div></a>
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
       </div>
@@ -129,11 +129,11 @@
   <footer class="footer page__section">
     <nav>
       <ul class="footer__links">
-        <li class="footer__list-item"><a class="footer__link" href="#">Карты</a></li>
-        <li class="footer__list-item"><a class="footer__link" href="#">Погода</a></li>
-        <li class="footer__list-item"><a class="footer__link" href="#">Расписание</a></li>
-        <li class="footer__list-item"><a class="footer__link" href="#">Календарь</a></li>
-        <li class="footer__list-item"><a class="footer__link" href="#">Путешествия</a></li>
+        <li class="footer__list-item"><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
+        <li class="footer__list-item"><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
+        <li class="footer__list-item"><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
+        <li class="footer__list-item"><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
+        <li class="footer__list-item"><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
       </ul>
     </nav>
     <div class="footer__copyright">&copy; 2021. Владимир Рябцев</div>
