--- a/index.html
+++ b/index.html
@@ -118,11 +118,13 @@
     </section>
 
     <section class="cover page__section page__section_size_xl">
-      <div class="cover__background">
-        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala"><div class="cover__overlay"></div></a>
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-      </div>
+      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <div class="cover__background">
+          <div class="cover__overlay"></div>
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        </div>
+      </a>
     </section>
   </main>
 
