--- a/index.html
+++ b/index.html
@@ -118,11 +118,8 @@
 
     <section class="cover page__section page__section_size_xl">
       <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-        <div class="cover__background">
-          <div class="cover__overlay"></div>
           <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-        </div>
       </a>
     </section>
   </main>
@@ -137,7 +134,7 @@
         <li class="footer__list-item"><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
       </ul>
     </nav>
-    <div class="footer__copyright">&copy; 2021. Владимир Рябцев</div>
+    <p class="footer__copyright">&copy; 2021. Владимир Рябцев</p>
   </footer>
 
 </body>
