--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
     <section class="lead page__section page__section_size_l">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-      <img class="lead__image" src="./images/lead-image.png" alt="Фотография спящей девушки в плацкартном вагоне поезда дальнего следования">
-      <p class="lead__caption">ваша полка — верхняя</p>
+      <figure class="lead__figure">
+        <img class="lead__image" src="./images/lead-image.jpg" alt="Фотография спящей девушки в плацкартном вагоне поезда дальнего следования">
+        <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+      </figure>
+
     </section>
 
     <section class="intro page__section page__section_size_s">
